[tool.poetry]
name = "canonical.com"
version = "0.1.0"
description = "Repository for the canonical.com website"
authors = ["Maximilian Ehlers <maximilian.ehlers@canonical.com>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.6"
"canonicalwebteam.flask-base" = "^0.1.0"
Flask = "^1.0"
mistune = "^0.8.4"
python-frontmatter = "^0.4.5"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"
black = "19.3b0"
pytest = "^4.6"


[tool.poetry.scripts]
start-app = "app"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
